[metadata]
name = ytvsearch
version = 0.2
description = Yahoo Japan TV Search Wrapper/Scraper
license = MIT
url = https://github.com/tsubasaogawa/ytvsearch

[options]
package_dir =
    =src
packages = find:
install_requires =
    beautifulsoup4 >=4.8.2
    requests >=2.22.0
    urllib3 >=1.25.7

[options.packages.find]
where = src